welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:2: error: value avance is not a member of Unit
def growFlowers(){fleur(Color.RED);avance(4);fleur(Color.BLUE);recule();droite()avance(2);gauche();recule()
                                                                                ^